[project]
name = "research-rag-system"
version = "0.1.0"
description = "研究室 esa.io RAGシステム"
authors = [
  { name = "Lab Member", email = "lab@example.com" }
]
dependencies = [
    # Web フレームワーク
    "streamlit>=1.28.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    # データベース・ベクトル検索
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    # 機械学習・NLP
    "transformers>=4.35.0",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    # テキスト処理
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "python-multipart>=0.0.6",
    # HTTP・API
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "ratelimit>=2.2.1",
    # ユーティリティ
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "loguru>=0.7.0",
    "pydantic-settings>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "protobuf>=6.31.1",
    "accelerate>=1.9.0",
    "bitsandbytes>=0.46.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
